# trading-data-pipeline

./: .gitignore  README.md  pyproject.toml
src/pipeline/: __init__.py  collector.py  db.py  main.py
