[project]
name = "trading-data-pipeline"
version = "0.1.0"
description = "Data collection and warehousing for the auto-trading system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ccxt>=4.4.0",
    "duckdb>=1.1.0",
    "pandas>=2.2.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline"]

[tool.ruff]
line-length = 88
target-version = "py313"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
]
